# GuiChat

./: .gitignore  GuiChat.cabal  README.md
src/: chat.hs
src/GuiChat/: Canvas.hs  EventHandling.hs  Types.hs
